NOOP: Fix up filters & searching in the blist list * After a search, collapse all children with parents properly * Display all filters where the parent doesn't match as a normal row, instead of a child row * Switch to CSS classes for hiding rows based on searchable & treeTable, instead of .hide() and .show()

--- a/public/stylesheets/widgets.css
+++ b/public/stylesheets/widgets.css
@@ -820,6 +820,11 @@ table.gridList tr.child.hover.selected td.description > *
     background-repeat: no-repeat;
 }
 
+table.gridList tr.child.collapsed
+{
+    display: none;
+}
+
 
 /* Selectable list: checkbox sprites on hover */
 .outerContent table.selectableList tr.hover td.type > div
@@ -833,6 +838,13 @@ table.gridList tr.child.hover.selected td.description > *
 {
     background-image: url(images/content/table/icon_type_sprites.png);
     background-position: 0 -310px;
+}
+
+
+/* Styling for searchable in grid */
+table.gridList tr.filteredOut
+{
+    display: none;
 }
 
 
